--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  database: seamless
+  database: weavenote
   pool: 5
   username: root
   password:
@@ -20,11 +20,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: seamless_test
+  database: weavenote_test
 
 production:
   <<: *default
-  database: seamless
+  database: weavenote
   username: root
   password: Boobies!111
   socket: /run/mysqld/mysqld.sock
