--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ config/application.yml
 /public/system/letter_avatars
 
 # PDF Kit Sass 
-/lib/pdfkit/node_modules
-/lib/pdfkit/.sass-cache
+/lib/css/node_modules
+/lib/css/.sass-cache
 
 ngrok
